Create functionality to create list if nonexistent and print contents to terminal if existant

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@
 *.i*86
 *.x86_64
 *.hex
+to_do_list
+rock_paper_scissors
+calculator
 
 # Debug files
 *.dSYM/
@@ -53,3 +56,6 @@ dkms.conf
 
 # Personal testing file
 test.c
+
+# Excluding text files for now
+*.txt
